--- a/ApplicationParser.Runner/Test.tt
+++ b/ApplicationParser.Runner/Test.tt
@@ -2,7 +2,6 @@
 <#@ assembly name="System.Core" #>
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
-<#@ import namespace="Microsoft.VisualStudio.TextTemplating" #>
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="ApplicationParser" #>
 <#@ assembly name="$(SolutionDir)\ApplicationParser\bin\Debug\ApplicationParser.dll" #>
@@ -13,11 +12,7 @@
 <# string fileContent = System.IO.File.ReadAllText(filePath); #>
 <# var app = new ApplicationParser.Parser().Parse(fileContent); #>
 <#@ output extension=".cs" #>
-using System;
-using kCura.Relativity.Client.DTOs;
-using ApplicationParser.Runner;
-
-namespace Test
+namespace ApplicationParser.Runner
 {
 
 	public static class Application 
@@ -25,8 +20,6 @@ namespace Test
 		public const string Name = "<#= app.Name #>";
 		public const string Guid = "<#= app.Guid #>";
 	}
-
-<#= app.WriteClasses() #>
 <#= app.WriteObjectTypeGuids() #>
 <#= app.WriteObjectGuids() #>
 <#= app.WriteChoiceGuids() #>
